--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "icon": "svgr icons -d components/icons --icon --replace-attr-values \"#fff=currentColor\""
   },
   "dependencies": {
+    "@svgr/cli": "^5.5.0",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
